# cargocrypt

./: .gitignore  COMPREHENSIVE_TESTING_GUIDE.md  Cargo.toml  FINAL_VALIDATION_REPORT.md  IMPLEMENTATION_ROADMAP.md  PERFORMANCE_SUMMARY.md  PERFORMANCE_VALIDATION_REPORT.md  PUBLICATION_SUCCESS.md  PUBLISHING_GUIDE.md  README.md  RELEASE_NOTES_v0.1.2.md  SECURITY_AUDIT_REPORT.md  STABILITY_GUIDE.md  TESTING_ISSUES_REPORT.md  TEST_EXECUTION_REPORT.md  TEST_REPORT.md  TUI_IMPLEMENTATION_SUMMARY.md  benchmark_cargocrypt.py  benchmark_summary.json  cargocrypt_benchmark_results.md  comprehensive_feature_test.sh  comprehensive_test.sh  feature_test_results.txt  package-lock.json  performance_test  performance_test.rs  stress_test  stress_test.rs  test-v012.sh  test_all_features.sh  test_basic  test_filename_bug  test_filename_bug.rs  test_fix  test_fix.rs  test_integration.rs  test_output_comprehensive.txt  test_password_changes.rs  test_report.md  tui_demo.rs
.hive-mind/: hive.db  hive.db-shm  hive.db-wal
.swarm/: memory.db  memory.db-shm  memory.db-wal
cargocrypt/: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
cargocrypt/.swarm/: memory.db  memory.db-shm  memory.db-wal
cargocrypt/benches/: crypto_bench.rs  vs_rustyvault.rs
cargocrypt/docs/: architecture.md  secret_detection.md
cargocrypt/examples/: performance_test.rs  secret_detection.rs
cargocrypt/src/: core.rs  core_backup.rs  error.rs  lib.rs  main.rs  monitoring.rs  resilience.rs  tui.rs  tui_simple.rs  validation.rs
cargocrypt/src/crypto/: algorithm.rs  engine.rs  errors.rs  keys.rs  mock.rs  mod.rs  secrets.rs  security.rs  store.rs
cargocrypt/src/detection/: detector.rs  entropy.rs  findings.rs  mod.rs  patterns.rs  rules.rs  scanner.rs
cargocrypt/src/git/: attributes.rs  config.rs  hooks.rs  ignore.rs  mod.rs  repo.rs  storage.rs  team.rs
cargocrypt/src/tui/: dashboard.rs  mod.rs  monitoring.rs  secrets.rs  styles.rs
cargocrypt/test_project/: secret.txt
cargocrypt/tests/: core_integration_test.rs  stability_integration_test.rs
feature-test/: Cargo.toml
memory/: claude-flow-data.json
research/: cli-patterns.md  rustyvault-analysis.md
test-project/: .env..backup  .gitignore
test-workspace/: BUG_VERIFICATION_TESTS.md  QA_TEST_REPORT.md  qa-test-plan.sh  quick_verify.sh  (+4 more)
(+4 files in other folders)
