[package]
name = "cargocrypt"
version = "0.1.1"
edition = "2021"
authors = ["CargoCrypt Team"]
description = "Zero-config cryptographic operations for Rust projects"
license = "MIT OR Apache-2.0"
repository = "https://github.com/marcuspat/cargocrypt"
homepage = "https://github.com/marcuspat/cargocrypt"
keywords = ["cryptography", "security", "cli", "rust", "zero-config"]
categories = ["command-line-utilities", "cryptography", "development-tools"]
readme = "README.md"

[[bin]]
name = "cargocrypt"
path = "src/main.rs"

[dependencies]
# CLI and UX
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"

# Cryptography (ChaCha20-Poly1305 and Argon2)
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
subtle = "2.5"
hex = "0.4"
bincode = "1.3"
base64ct = "1.6"

# Additional crypto utilities
ring = "0.17"
rustls = { version = "0.22", default-features = false, features = ["ring"] }
rustls-webpki = "0.102"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Git operations (used by cargo-audit, cargo-deny)
git2 = "0.18"

# Serialization and config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TUI components
crossterm = "0.27"
ratatui = "0.24"

# File system operations
walkdir = "2.4"
ignore = "0.4"  # Respect .gitignore like ripgrep

# Secret detection
regex = "1.10"
rayon = "1.8"  # For parallel scanning

# Compression for git storage
flate2 = "1.0"

# Async HTTP (for key servers, etc.)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "vs_rustyvault"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
